# ai-duet

./: .env.example  .gitignore  README.md  pyproject.toml
src/ai_duet/: __init__.py  __main__.py  cli.py  cli_engine.py  config.py  formatter.py  git_integration.py  parallel_engine.py  persistence.py  protocol.py  server.py  tui.py
tests/: test_all.py
