[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-duet"
version = "0.1.0"
description = "Claude + Codex AI Collaboration Tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AI Duet Contributors" },
]
keywords = ["claude", "codex", "ai", "collaboration", "code-review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/ai-duet/ai-duet"
Repository = "https://github.com/ai-duet/ai-duet"
Issues = "https://github.com/ai-duet/ai-duet/issues"

[project.scripts]
duet = "ai_duet.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_duet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
